# kwiq-apps

./: .gitignore  README.md  requirements.txt  setup.py
apps/decoder/protobuf-decoder/: Dockerfile  decode_protobuf.sh  generate_protobuf.sh  proto_decoder.py
apps/git/git-mirror/: largest-files.sh  main.sh
apps/git/git-workspace/: __utils.py  create.py
apps/grafana/download-dashboards/: main.py
apps/packager/debian-packager/: Dockerfile
apps/packager/rpm-packager/: Dockerfile
apps/smart_code_merge/: app.py  apply_transformation.py  commit.py  commons.py  merge.py  prepare_transformation.py  setup.py
apps/translate_non_english_code/: app.py  apply_translation.py  build_translation_cache.py  prepare_translation.py  translate.py  utils.py
repository/bots/git/smart-merge/: __main.py  apply_3_way_merge.py  apply_renames.py  commons.py  extract_words.py  input_mapping.csv  main.py  nebulaiq_input_mapping.csv  pyproject.toml  rename_mapping.csv  run_command.py  setup_3_way_merge.py
repository/bots/git/smart-merge/workflow/: csv_iterator.py  csv_writer.py  file_iterator.py  human_step.py  state.py  step.py  utils.py  workflow.py
repository/bots/protobuf-decoder/: decode_bytes.py  decode_protobuf.sh  proto_decoder.py
repository/bots/translate-non-english-code/: apply_translation.py  deepflow-dashboards_non_english.json  deepflow-dashboards_translated.json  deepflow-gui-grafana_non_english.json  deepflow-gui-grafana_translated.json  find_non_english_strings.py  google_translate_text.py  merge_maps.py
repository/scripts/git/: mirror.sh
(+3 files in other folders)
